log/build_2025-02-15_18-21-40/scservo_driver/stderr.log
  File "/home/sunrise/scservo_ws/install/scservo_driver/lib/python3.10/site-packages/scservo_driver/improved_vision_control.py", line 94
    "content": "content": [{"type":"text","text": "你是移动机器人的导航助手。\
                        ^
SyntaxError: invalid syntax

